kubernetes/apps/networking/envoy-gateway/config/gateway-internal.yaml
# Internal/VPN-only ingress, LoadBalancer IP via Cilium LB-IPAM.
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
  namespace: networking
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns01
spec:
  gatewayClassName: envoy
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.internal.alexandremathieu.com"
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.internal.alexandremathieu.com"
      tls:
        mode: Terminate
        certificateRefs:
          - name: internal-gateway-tls
      allowedRoutes:
        namespaces:
          from: All
